--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
     "firebase": "^4.9.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "materialize-css": "^0.100.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
